--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Facebook Clone by Ricardo C" />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/fb.ico" />
     <title>Facebook Inc.</title>
   </head>
   <body>
